ontopia-core/src/test/resources/net/ontopia/testdata/ltm/error/BOM-contradicts-encoding.ltm
@"iso-8859-1"
[topic1]
